--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,10 @@ dependencies = [
     "duckdb (>=1.4.0,<2.0.0)",
     "pandas (>=2.3.2,<3.0.0)",
     "notebook (>=7.4.5,<8.0.0)",
-    "ipykernel (>=6.30.1,<7.0.0)"
+    "ipykernel (>=6.30.1,<7.0.0)",
+    "dbt-core (>=1.10.11,<2.0.0)",
+    "fastapi (>=0.116.2,<0.117.0)",
+    "uvicorn (>=0.35.0,<0.36.0)"
 ]
 
 
