--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,9 @@ dependencies = [
     "ipykernel (>=6.30.1,<7.0.0)",
     "dbt-core (>=1.10.11,<2.0.0)",
     "fastapi (>=0.116.2,<0.117.0)",
-    "uvicorn (>=0.35.0,<0.36.0)"
+    "uvicorn (>=0.35.0,<0.36.0)",
+    "vanna (>=0.7.9,<0.8.0)",
+    "dotenv (>=0.9.9,<0.10.0)"
 ]
 
 
